# arceos

./: .gitattributes  .gitignore  Cargo.toml  Makefile  README.md  build_img.sh  help.html  index.html  kernel-qemu  search-index.js  settings.html  text.txt
allocator/: all.html  enum.AllocError.html  index.html  struct.BitmapPageAllocator.html  struct.BuddyByteAllocator.html  struct.SlabByteAllocator.html  trait.BaseAllocator.html  trait.ByteAllocator.html  trait.IdAllocator.html  trait.PageAllocator.html  type.AllocResult.html
arm_gic/: all.html  index.html
axalloc/: all.html  fn.global_add_memory.html  fn.global_allocator.html  fn.global_init.html  index.html  struct.GlobalAllocator.html  struct.GlobalPage.html
axconfig/: all.html  constant.ARCH.html  constant.KERNEL_BASE_PADDR.html  constant.KERNEL_BASE_VADDR.html  constant.MMIO_REGIONS.html  constant.PHYS_MEMORY_BASE.html  constant.PHYS_MEMORY_END.html  constant.PHYS_MEMORY_SIZE.html  constant.PHYS_VIRT_OFFSET.html  constant.PLATFORM.html  constant.SMP.html  constant.TASK_STACK_SIZE.html  constant.TICKS_PER_SEC.html  constant.TIMER_FREQUENCY.html  constant.VIRTIO_MMIO_REGIONS.html  index.html
axdisplay/: all.html  fn.framebuffer_flush.html  fn.framebuffer_info.html  fn.init_display.html  index.html  struct.DisplayInfo.html  trait.DisplayDriverOps.html
axdriver/: all.html  fn.init_drivers.html  index.html  macro.block_devices_enumerate.html  macro.block_devices_for_each.html  macro.display_devices_enumerate.html  macro.display_devices_for_each.html  macro.net_devices_enumerate.html  macro.net_devices_for_each.html  struct.AllDevices.html  struct.BlockDevices.html  struct.DisplayDevices.html  struct.NetDevices.html  type.VirtIoGpuDev.html  type.VirtIoNetDev.html
axerrno/: all.html  enum.AxError.html  enum.LinuxError.html  index.html  macro.ax_err.html  macro.ax_err_type.html  type.AxResult.html  type.LinuxResult.html
axfs/: all.html  fn.init_filesystems.html  index.html
axfs_devfs/: all.html  index.html  struct.DeviceFileSystem.html  struct.DirNode.html  struct.NullDev.html  struct.ZeroDev.html
axfs_vfs/: all.html  enum.VfsNodeType.html  index.html  macro.impl_vfs_dir_default.html  macro.impl_vfs_non_dir_default.html  struct.FileSystemInfo.html  struct.VfsDirEntry.html  struct.VfsNodeAttr.html  struct.VfsNodePerm.html  trait.VfsNodeOps.html  trait.VfsOps.html  type.VfsError.html  type.VfsNodeRef.html  type.VfsResult.html
axhal/: all.html  index.html
axio/: all.html  enum.Error.html  enum.SeekFrom.html  index.html  struct.BufReader.html  trait.BufRead.html  trait.Read.html  trait.Seek.html  trait.Write.html  type.Result.html
axlog/: all.html  fn.__print_impl.html  fn.init.html  fn.set_max_level.html  index.html  macro.ax_print.html  macro.ax_println.html  macro.debug.html  macro.error.html  macro.info.html  macro.trace.html  macro.warn.html  trait.LogIf.html
axnet/: all.html  enum.IpAddr.html  fn.init_network.html  index.html  struct.Ipv4Addr.html  struct.SocketAddr.html  struct.TcpSocket.html
axruntime/: all.html  fn.rust_main.html  index.html
axsync/: all.html  index.html  struct.Mutex.html  struct.MutexGuard.html
axtask/: all.html  fn.current.html  fn.current_may_uninit.html  fn.exit.html  fn.init_scheduler.html  fn.init_scheduler_secondary.html  fn.on_timer_tick.html  fn.run_idle.html  (+7 more)
modules/axalloc/: Cargo.toml
modules/axfs_os/: Cargo.toml
modules/axfs_os/src/: dir.rs  file.rs  file_io.rs  flags.rs  lib.rs  pipe.rs  stdio.rs  types.rs
modules/axsyscall/: Cargo.toml
modules/axsyscall/src/: fs.rs  lib.rs  mem.rs  syscall_id.rs  task.rs
modules/axtask/: Cargo.toml
scripts/: Cargo.toml  handle_all.py  localize.py  rename_crate.py  tmp.py
scripts/make/: build.mk  cargo.mk
(+702 files in other folders)
