[package]
name = "axfs_os"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axerrno = { path = "../../crates/axerrno" }
axfs = { path = "../axfs" }
axtask = { path = "../axtask" }
axio = { path = "../../crates/axio" }
axsync = { path = "../axsync" }
axlog = { path = "../axlog" }
axhal = { path = "../axhal" }

log = { path = "../../extern_crates/log-0.4.17" }
bitflags = "2.0"