[package]
name = "axsyscall"
version = "0.1.0"
edition = "2021"
authors = ["Youjie Zheng <zyj578335934@gmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axhal = { path = "../axhal" }
axalloc = { path = "../axalloc" }
axlog = { path = "../axlog" }
axprocess = { path = "../axprocess" }
axfs_os = { path = "../axfs_os" }
axfs = { path = "../axfs" }
axmem = { path = "../axmem" }
axsync = { path = "../axsync" }
axerrno = { path = "../../crates/axerrno" }
log = { path = "../../extern_crates/log-0.4.17" }
bitflags = "2.0"
memory_addr = { path = "../../crates/memory_addr" }