[package]
name = "axtask"
version = "0.1.0"
edition = "2021"
authors = ["Yuekai Jia <equation618@gmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
test = ["percpu?/sp-naive"]
multitask = [# without the feature, can still use the empty yield_now() and exit()
    "dep:axconfig", "dep:percpu", "dep:spinlock", "dep:lazy_init",
    "dep:memory_addr", "dep:scheduler", "dep:timer_list"
]
paging = []
preempt = ["percpu?/preempt"]
user = ["axhal/user"]
sched_fifo = ["multitask"]
sched_rr = ["multitask", "preempt"]
default = ["sched_fifo", "user", "multitask", "paging"]

[dependencies]
axlog = { path = "../axlog" }
cfg-if = "1.0"
log = { path = "../../extern_crates/log-0.4.17" }
axalloc = { path = "../axalloc" }
axhal = { path = "../axhal" }
axconfig = { path = "../axconfig", optional = true }
percpu = { path = "../../crates/percpu", optional = true }
spinlock = { path = "../../crates/spinlock", optional = true }
lazy_init = { path = "../../crates/lazy_init", optional = true }
memory_addr = { path = "../../crates/memory_addr", optional = true }
scheduler = { path = "../../crates/scheduler", optional = true }
timer_list = { path = "../../crates/timer_list", optional = true }
kernel_guard = { path = "../../crates/kernel_guard" }
crate_interface = { path = "../../crates/crate_interface" }
# riscv = "0.10"
riscv = { path = "../../extern_crates/riscv-0.10.1" }
[dev-dependencies]
# rand = "0.8"
rand = { path = "../../extern_crates/rand-0.8.5" }
axtask = { path = ".", features = ["test"] }
